force-app/main/default/objects/Order_Rating__c/Order_Rating__c.object-meta.xml
<CustomObject>
    <label>Order Rating</label>
    <nameField>
        <label>Order Rating Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Ratings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>