force-app/main/default/objects/Order_Rating__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <inlineHelpText>Enter review of Order Delivery Experience</inlineHelpText>
    <label>Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>