force-app/main/default/objects/Order_Rating__c/fields/Star_Rating__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating__c</fullName>
    <inlineHelpText>Rate order delivery experience low 1 to high 5</inlineHelpText>
    <label>Star Rating</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>