force-app/main/default/objects/Order_Rating__c/validationRules/Rating_only_for_fulfilled_order.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_only_for_fulfilled_order</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW(),
ISPICKVAL(Order_Summary__r.Status, &quot;Fulfilled&quot;)
)</errorConditionFormula>
    <errorMessage>Rating and review can only be provided after the Order is Fulfilled</errorMessage>
</ValidationRule>